--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
+    
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
@@ -17,6 +20,14 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
   </head>
 
+  <style>
+    body {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+    nav {
+      font-family: 'Bungee', sans-serif;
+    }
+  </style>
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
