Replace id with class

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         </form>
       </section>
       <section class="tweets">
-        <article id="tweet">
+        <article class="tweet">
           <header>
             <div>
               Name images
