Fetching tweets and form submisions

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script type="text/javascript" src="/scripts/hover.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   
@@ -60,28 +61,8 @@
           </div>
         </form>
       </section>
-      <section class="tweets">
-        <article class="tweet">
-          <header>
-            <div>
-              Name images
-            </div>
-            <div>
-              username
-            </div>
-          </header>
-          article 
-          <footer>
-            <div>
-              date
-            </div>
-            <div>
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i>
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </footer>
-        </article>
+      <section class="tweets" id="tweets-container">
+
       </section>
     </main>
   </body>
